== 1.6.1

    Bugfixes:
    ----------------------------
    + Fixed RADIUS authentication fails on 1.6.0 (#3986);
    + Fixed cannot add NAT issue (#3993);

    Security Fixes:
    ----------------------------
    + Multiple XSS injections (#4145,#4146,#4147,#4148,#4149.#4150,#4151);
    + HTML DOM XSS injection via filenames when uploading (#4160);

== 1.6.0

    Enhancements, changes:
    ----------------------------
    + php8.3 compatibility;
    + MySQL 5.5.3+ is now required (support for utf8mb4);
    + Reverse-proxy users should review the new config.php $trust_x_forwarded_headers setting;

    Security Fixes:
    ----------------------------
    + SQL injection in custom field enum/set types;
    + Directory traversal possible in RIPE query;
    + XSS (reflected) in 'bw-calulator-result.php';
    + XSS (reflected) by invalid email address response;
    + XSS (reflected) by /app/tools/subnet-masks/popup.php (#3738);
    + XSS (stored) in user widget settings;
    + XSS and LDAP injection in ad-search-result.php;
    + XSS and LDAP injection in ad-search-group-result.php;
    + Restrict find_full_subnets.php to CLI;
    + Ensure confidentiality of database password;

== 1.5.0

    New features:
    ------------
    + Mark subnet as isPool to allocate network and broadcast addresses;
    + Optionally hide section subnet menus;
    + L2 Domains user permissions;
    + Add scanPingType=="none" option to disable scanning;
    + Custom fields on IP request forms (#2956);
    + Added subnet free space map for each possible subnet mask;
    + Added Vaults (Certificate andf password storing);
    + Added Tools->Duplicate subnets & IP page;
    + Added config.php offline_mode to disable server-side Internet lookups (#3462);
    + Added MAC vendor lookup widget;

    Enhancements, changes:
    ----------------------------
    + php7.4 compatibility;
    + SameSite attribute enabled for site cookies;
    + SAML2
        + php-saml updated to 3.4.1 (#3055);