@@ -7,11 +7,18 @@
 /* functions */
 require_once( dirname(__FILE__) . '/../../functions/functions.php' );
 
+if (!defined('VERSION_VISIBLE') || Config::ValueOf('disable_installer')) { print _("Install scripts disabled"); exit(0); }
+
 # initialize user object
 $Database 	= new Database_PDO;
 $Install 	= new Install ($Database);
 $Tools	 	= new Tools ($Database);
+$Crypto     = new Crypto();
 $Result 	= new Result ();
+
+// Manually start session as we do not have $User.
+session_start();
+$Crypto->csrf_cookie ("validate", "install_execute", $POST->csrf_cookie) === false ? $Result->show("danger", _("Invalid CSRF cookie"), true) : "";
 
 # make sure it is properly requested
 if (!isset($_SERVER['HTTP_X_REQUESTED_WITH']) || $_SERVER['HTTP_X_REQUESTED_WITH'] != "XMLHttpRequest")						{ $Result->show("danger", _("Invalid request"), true); }
