@@ -1,4 +1,6 @@
 <?php
+if (!defined('VERSION_VISIBLE') || Config::ValueOf('disable_installer')) { print _("Install scripts disabled"); exit(0); }
+
 $db = Config::ValueOf('db');
 
 // add prefix - install or migrate
