@@ -9,6 +9,7 @@
     ----------------------------
     + Multiple XSS injections (#4145,#4146,#4147,#4148,#4149.#4150,#4151);
     + HTML DOM XSS injection via filenames when uploading (#4160);
+    + Disable /app/install/ helper scripts via config.php $disable_installer;
 
 == 1.6.0
 
